# maplibre-tile-spec

./: Cargo.toml  README.md  rust-toolchain.toml
crates/RLE/: Cargo.toml
crates/RLE/src/: bool.rs  f32.rs  f64.rs  lib.rs  u16.rs  u32.rs  u8.rs
crates/RLE/tests/: both.rs  decode.rs  encode.rs
crates/bitpacking/src/: fastpack.rs  fastpackwithoutmask.rs  fastunpack.rs  lib.rs  tests.rs
crates/bitpacking/tests/: fastpack.rs  fastpackwithoutmask.rs  fastunpack.rs
crates/delta/: Cargo.toml
crates/delta/src/: lib.rs  simd.rs  simple.rs
crates/delta/tests/: both.rs  decode.rs  encode.rs
crates/dictionary/: Cargo.toml
crates/dictionary/src/: lib.rs
crates/dictionary/tests/: both.rs  decode.rs  encode.rs
crates/fastpfor/: Cargo.toml  README.md
crates/fastpfor/assets/: .gitignore
crates/fastpfor/benches/: decode.rs
crates/fastpfor/src/: fastpfor256.rs  lib.rs  utils.rs
crates/fastpfor/src/simd/: fastpfor256.rs
crates/fastpfor/src/simple/: fastpfor256.rs  mod.rs
crates/fastpfor/tests/: decode.rs
crates/fsst/src/: lib.rs
crates/varint/: Cargo.toml
crates/varint/src/: lib.rs
crates/varint/tests/: both.rs  decode.rs  encode.rs  length.rs
playground/varint_perf/assets/: .gitignore
src/: lib.rs
src/arch/: mod.rs  wasm32.rs
