[package]
name = "maplibre-tile-spec"
version = "0.1.0"
authors = ["thomas-a.boehm@rohde-schwarz.com"]
edition = "2021"

[workspace]
members = [
    "crates/bitpacking",
    "crates/fastpfor",
    "crates/RLE"
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
